# mlflow_trial

./: .gitignore  README.md  pyproject.toml  test_mlflow.ipynb  test_with_transformer.ipynb
