[tool.poetry]
name = "mlflow-trial"
version = "0.1.0"
description = ""
authors = ["Keith(leung.tsz.kit) <leung.tsz.kit@moneyforward.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.6.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
