[tool.poetry]
name = "mlflow-trial"
version = "0.1.0"
description = ""
authors = ["Keith(leung.tsz.kit) <leung.tsz.kit@moneyforward.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.6.0"
ipykernel = "^6.25.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
transformers = "^4.33.1"
datasets = "^2.14.5"
sentencepiece = "^0.1.99"
accelerate = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
